<resources>
    <string name="app_name">AutoPart Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AutoPartDashboard</string>
    <string name="nav_header_subtitle">Mobile Report for Autopart</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profitloss">Laba Rugi</string>
    <string name="menu_project">Project</string>
    <string name="menu_sales">Penjualan</string>
    <string name="menu_apaging">Saldo Hutang</string>
    <string name="menu_cashflow">Cash Flow</string>
    <string name="menu_araging">Saldo Piutang</string>
    <string name="menu_agingstock">Persediaan</string>

    <string name="home_second">Home Second</string>
    <string name="default_text">text</string>
    <string name="menu_setting">Setting</string>
    <string name="caption_simpan">Simpan</string>

    <string-array name="months_array">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

    <string-array name="years_array">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>


    <string-array name="periods_array">
        <item>Last 7 Days</item>
        <item>Last 30 Days</item>
    </string-array>
</resources>
